--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
       </div>
       <div class="image_item">
         <img src="image/home1.jpg" alt="" class="slide active" onclick="img('image/home1.jpg')">
-        <img src="image/home2.png" alt="" class="slide" onclick="img('image/home2.jpg')">
-        <img src="image/home3.png" alt="" class="slide" onclick="img('image/home3.jpg')">
+        <img src="image/home2.png" alt="" class="slide" onclick="img('image/home2.png')">
+        <img src="image/home3.png" alt="" class="slide" onclick="img('image/home3.png')">
         <img src="image/home4.jpg" alt="" class="slide" onclick="img('image/home4.jpg')">
       </div>
     </div>
