--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <div class="head_container">
       <div class="box">
         <div class="text">
-          <h1>Hello.Salut.Hola</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+          <h1>Mulailah Petualangan Off-Road Dengan Maksimal</h1>
+          <p></p>
           <button>MORE INFO</button>
         </div>
       </div>
@@ -121,10 +121,12 @@
       </div>
       <div class="right">
         <div class="heading">
-          <h5>RAISING COMFOMRT TO THE HIGHEST LEVEL</h5>
-          <h2>Welcome to Luviana Hotel Resort</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <h5>MAKE YOUR ADVENTURE TO THE HIGHEST LEVEL</h5>
+          <h2>Welcome to Jeep Quest</h2>
+          <p>JeepQuest adalah aplikasi pemesanan jeep yang didedikasikan untuk para penggemar 
+            alam dan petualang sejati. Dengan semangat eksplorasi dan kebebasan, kami membawa 
+            platform yang akan mempermudah perjalanan off-road Anda, membantu Anda menemukan 
+            lokasi eksotis, dan merencanakan petualangan tak terlupakan. </p>
           <button class="btn1">READ MORE</button>
         </div>
       </div>
