--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <div class="heading_top flex1">
         <div class="heading">
           <h5>RAISING COMFORT TO THE HIGHEST LEVEL</h5>
-          <h2>Rooms $ Suites</h2>
+          <h2>Trip Package</h2>
         </div>
         <div class="button">
           <button class="btn1">VIEW ALL</button>
@@ -193,8 +193,8 @@
             <img src="image/r1.jpg" alt="">
           </div>
           <div class="text">
-            <h3>Superior Soble Rooms</h3>
-            <p> <span>$</span>129 <span>/per night</span> </p>
+            <h3>Short Trip Adventure</h3>
+            <p> <span>Rp</span>250.000,- <span>/per trip</span> </p>
           </div>
         </div>
         <div class="box">
@@ -202,8 +202,8 @@
             <img src="image/r2.jpg" alt="">
           </div>
           <div class="text">
-            <h3>Superior Soble Rooms</h3>
-            <p> <span>$</span>129 <span>/per night</span> </p>
+            <h3>Medium Trip Adventure</h3>
+            <p> <span>Rp</span>350.00,- <span>/per trip</span> </p>
           </div>
         </div>
         <div class="box">
@@ -211,8 +211,8 @@
             <img src="image/r3.jpg" alt="">
           </div>
           <div class="text">
-            <h3>Superior Soble Rooms</h3>
-            <p> <span>$</span>129 <span>/per night</span> </p>
+            <h3>Full Trip Adventure</h3>
+            <p> <span>Rp</span>550.000,- <span>/per trip</span> </p>
           </div>
         </div>
       </div>
@@ -222,20 +222,20 @@
     <div class="container">
       <div class="text">
         <div class="heading">
-          <h5>AT THE HEART OF COMMUNICATION</h5>
+          <h5>AT THE HEART OF EXPERIENCE</h5>
           <h2>People Say</h2>
         </div>
 
         <div class="para">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+          <p>JeepQuest adalah aplikasi luar biasa untuk memesan tur jeep! Antarmukanya ramah pengguna, mudah memilih dari berbagai paket tur menarik. Ketersediaan tur pada tanggal tertentu ditampilkan, perencanaan jadi mudah. Proses pemesanan lancar, konfirmasi cepat. Tak sabar untuk petualangan jeep saya! </p>
 
           <div class="box flex">
             <div class="img">
               <img src="image/c.jpg" alt="">
             </div>
             <div class="name">
-              <h5>KATE PALMER</h5>
-              <h5>IDAHO</h5>
+              <h5>Susan purti</h5>
+              <h5>Solo</h5>
             </div>
           </div>
         </div>
@@ -251,33 +251,26 @@
       </div>
       <div class="right">
         <div class="text">
-          <h2>Our Restaurant</h2>
+          <h2>Our Trip Package</h2>
           <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
         <div class="accordionWrapper">
           <div class="accordionItem open">
-            <h2 class="accordionIHeading">Italian Kitchen</h2>
+            <h2 class="accordionIHeading">Short Trip Adventure</h2>
             <div class="accordionItemContent">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               </p>
             </div>
           </div>
           <div class="accordionItem close">
-            <h2 class="accordionIHeading">Mexican Kitchen</h2>
+            <h2 class="accordionIHeading">Medium Trip Adventure</h2>
             <div class="accordionItemContent">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               </p>
             </div>
           </div>
           <div class="accordionItem close">
-            <h2 class="accordionIHeading">Italian Kitchen</h2>
-            <div class="accordionItemContent">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              </p>
-            </div>
-          </div>
-          <div class="accordionItem close">
-            <h2 class="accordionIHeading">Mexican Kitchen</h2>
+            <h2 class="accordionIHeading">Full Trip Adventure</h2>
             <div class="accordionItemContent">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               </p>
