--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header class="header" id="navigation-menu">
     <div class="container">
       <nav>
-        <a href="#" class="logo"> <img src="image/logo.png" alt=""> </a>
+        <a href="#" class="logo"> <img src="image/img/logo jeep.png" alt=""> </a>
 
         <ul class="nav-menu">
           <li> <a href="#home" class="nav-link">Home</a> </li>
@@ -190,7 +190,7 @@
       <div class="content grid">
         <div class="box">
           <div class="img">
-            <img src="image/r1.jpg" alt="">
+            <img src="image/img/jeep1.jpg" alt="">
           </div>
           <div class="text">
             <h3>Short Trip Adventure</h3>
@@ -199,7 +199,7 @@
         </div>
         <div class="box">
           <div class="img">
-            <img src="image/r2.jpg" alt="">
+            <img src="image/img/jeep2.png" alt="">
           </div>
           <div class="text">
             <h3>Medium Trip Adventure</h3>
@@ -208,7 +208,7 @@
         </div>
         <div class="box">
           <div class="img">
-            <img src="image/r3.jpg" alt="">
+            <img src="image/img/jeep3.png" alt="">
           </div>
           <div class="text">
             <h3>Full Trip Adventure</h3>
@@ -231,7 +231,7 @@
 
           <div class="box flex">
             <div class="img">
-              <img src="image/c.jpg" alt="">
+              <img src="image/img/car.jpg" alt="">
             </div>
             <div class="name">
               <h5>Susan purti</h5>
@@ -247,7 +247,7 @@
   <section class="restaurant top" id="restaurant">
     <div class="container flex">
       <div class="left">
-        <img src="image/re.jpg" alt="">
+        <img src="image/ing/gunung.jpg" alt="">
       </div>
       <div class="right">
         <div class="text">
@@ -315,28 +315,28 @@
 
       <div class="owl-carousel owl-theme">
         <div class="item">
-          <img src="image/g1.jpg" alt="">
+          <img src="image/img/jeep1.jpg" alt="">
         </div>
         <div class="item">
-          <img src="image/g2.jpg" alt="">
+          <img src="image/img/jeep2.png" alt="">
         </div>
         <div class="item">
-          <img src="image/g3.jpg" alt="">
+          <img src="image/img/jeep3.png" alt="">
         </div>
         <div class="item">
-          <img src="image/g4.jpg" alt="">
+          <img src="image/img/jeep4.jpg" alt="">
         </div>
         <div class="item">
-          <img src="image/g5.jpg" alt="">
+          <img src="image/img/jeep5.png" alt="">
         </div>
         <div class="item">
-          <img src="image/g6.jpg" alt="">
+          <img src="image/img/jeep1.jpg" alt="">
         </div>
         <div class="item">
-          <img src="image/g7.jpg" alt="">
+          <img src="image/img/jeep3.png" alt="">
         </div>
         <div class="item">
-          <img src="image/g8.jpg" alt="">
+          <img src="image/img/jeep2.png" alt="">
         </div>
       </div>
 
