--- a/index.html
+++ b/index.html
@@ -318,19 +318,19 @@
           <img src="image/img/jeep1.jpg" alt="">
         </div>
         <div class="item">
-          <img src="image/img/jeep2.png" alt="">
+          <img src="image/img/Nature.png" alt="">
         </div>
         <div class="item">
           <img src="image/img/jeep3.png" alt="">
         </div>
         <div class="item">
-          <img src="image/img/jeep4.jpg" alt="">
+          <img src="image/img/Nature1.jpg" alt="">
         </div>
         <div class="item">
-          <img src="image/img/jeep5.png" alt="">
+          <img src="image/img/offroad.png" alt="">
         </div>
         <div class="item">
-          <img src="image/img/jeep1.jpg" alt="">
+          <img src="image/img/Canadian.jpg" alt="">
         </div>
         <div class="item">
           <img src="image/img/jeep3.png" alt="">
