--- a/index.html
+++ b/index.html
@@ -321,13 +321,13 @@
           <img src="image/img/Nature.png" alt="">
         </div>
         <div class="item">
-          <img src="image/img/jeep3.png" alt="">
+          <img src="image/img/SR.jpg" alt="">
         </div>
         <div class="item">
-          <img src="image/img/Nature1.jpg" alt="">
+          <img src="image/img/Nature1.png" alt="">
         </div>
         <div class="item">
-          <img src="image/img/offroad.png" alt="">
+          <img src="image/img/offroad.jpg" alt="">
         </div>
         <div class="item">
           <img src="image/img/Canadian.jpg" alt="">
