--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
   <section class="restaurant top" id="restaurant">
     <div class="container flex">
       <div class="left">
-        <img src="image/ing/gunung.jpg" alt="">
+        <img src="image/ing/gunung.png" alt="">
       </div>
       <div class="right">
         <div class="text">
@@ -333,7 +333,7 @@
           <img src="image/img/Canadian.jpg" alt="">
         </div>
         <div class="item">
-          <img src="image/img/jeep3.png" alt="">
+          <img src="image/img/offroad.jpg" alt="">
         </div>
         <div class="item">
           <img src="image/img/jeep2.png" alt="">
