--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
       <div class="heading_top flex1">
         <div class="heading">
           <h5>WELCOME TO OUR PHOTO GALLERY</h5>
-          <h2>Photo Gallery of Our Hotel</h2>
+          <h2>Photo Gallery of Our Adventure</h2>
         </div>
         <div class="button">
           <button class="btn1">VIEW GALLERY</button>
